# senior-common-room

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.txt  gulpfile.js  package.json  prepare_release.py  pyproject.toml  pytest.ini  setup.py  test.ini  test.py
.github/workflows/: deploy-docker.yml  e2e-test.yml  release.yml
assets/: hub.json
assets/welcome/: index.html
docker/dev/: docker-compose.yml
docker/dev/assets/: entrance.json  hub.json
docker/dev/nginx/: Dockerfile  nginx.default.conf
docker/production/: .env  .gitignore  Dockerfile  config.yml  docker-compose.yml
docker/production/mosquitto/: Dockerfile
docker/production/static/: Dockerfile  nginx.default.conf
docker/test/: .env  docker-compose.yml
docker/test/mosquitto/: Dockerfile
docker/test/nginx/: nginx.default.conf
docs/: WebsocketFlows.md
src/frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
src/frontend/public/: index.html
src/frontend/src/: App.svelte  App.vue  global.d.ts  storage.ts
src/old/models/: __init__.py
src/old/scripts/: __init__.py  config.py  user.py
src/old/static/: theme.css
src/old/templates/: root.jinja2
src/old/views/: default.py  user.py
src/scr/: __init__.py  __main__.py  db.py  permissions.py  routes.py  session.py  tests.py  util.py
src/scr/cli/: __init__.py  db.py  server.py  users.py
src/scr/handlers/: test.py  web.py
src/scr/models/: room.py  room_role.py  user.py
src/scr/scripts/: __init__.py  config.jinja2
src/scr/static/: theme.css
src/scr/templates/: layout.jinja2  root.jinja2
src/scr/views/: default.py  room.py  user.py
src/senior_common_room/: __init__.py  __main__.py  handlers.py  validation.py
src/senior_common_room/api/: __init__.py  admin.py  config.py  jitsi.py  messages.py  room.py  user.py
src/senior_common_room/models/: __init__.py  (+2 more)
src/theme/: _alert.scss  _button.scss  _dialog.scss  _form.scss  _generic.scss  _layout.scss  _menu.scss  _room.scss  _settings.scss  _tabs.scss  _typography.scss  app.scss
tests/: landing.ts  util.ts
tests/api_test/: authorisation_test.py  conftest.py
tests/api_tests/: basic_test.py
tests/users/: login.ts  logout.ts
(+64 files in other folders)
