[tool.poetry]
name = "scr"
version = "0.1.0"
description = "A simple wrapper around Jitsi Meet"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^1.10.4"
pyramid_jinja2 = "^2.8"
pyramid_tm = "^2.4"
SQLAlchemy = "^1.3.16"
transaction = "^3.0.0"
"zope.sqlalchemy" = "^1.3"
waitress = "^1.4.3"
sqlalchemy_json = "^0.4.0"
click = "^7.1.1"
pyramid_nacl_session = "^0.3"
decorator = "^4.4.2"
email_validator = "^1.0.5"
cerberus = "^1.3.2"
inflect = "^4.1.0"
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
WebTest = "^1.3.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pyramid_debugtoolbar = "^4.6.1"
pre-commit = "^2.2.0"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"

[tool.poetry.scripts]
scr = "scr.scripts:main"

[tool.poetry.extras]
pgsql = ["psycopg2"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
