[tool.poetry]
name = "scr"
version = "0.1.0"
description = "A simple wrapper around Jitsi Meet"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"
asyncpg = "^0.21.0"
asyncio-mqtt = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pre-commit = "^2.2.0"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
